Version 2.1.2
----------------------------------
Core - General
- Minor fix to missing lang string stuff
- Fixes to home page preferences
- API documentation fixes (minor)

ModuleManager v2.0.2
- Minor fix for some notices in install and upgrade modules.
- Minor typo fixes.
- Minor fixes for PHP7

MenuManager  v1.50.2
- make sure that uninstall cleans up properly.

MicroTiny v2.0.3
- minor template fix.
- fixes for stylesheet overrides.

Version 2.1.1 - Nicholls Town
----------------------------------
Core - General
- Fix the template compiler so that content blocks can be placed within sub templates and detected with the {include} tag.
- Fix minor problem with checksum verification.
- Fix to the cms_cache_handler class
- Minor fix to SetAllPageHierarchies()
- Correct location where session was started in frontend displays.
- Fix the default option for {content_image}
- Modify the locker to use a beacon if supported, when unlocking.
- Fix missing permissions when a 1.12 site was upgraded (installation assistant)

CMSContentmanager v1.1
- Minor template changes in edit content wrt. locking
- Adds ability to clear content locks (admins can clear all locks, regular users can only clear their locks)
- Enhancements to the action to bulk set designs to show only page templates by default, but to optionally show more.

DesignManager v1.1.1
- Minor template changes in edit content wrt. locking
- Adds ability to clear template and css locks (admins can clear all locks, regular users can only clear their locks)


Version 2.1 - Bahamas
----------------------------------
Core - General
- Minor performance tweaks to sample htaccess.txt
- Minor fix to the ProcessTemplateFromDatabase module API method.
- Improvements and re-factor the way headers are sent wrt caching
- Add a new method to the ModuleOperations class to allow a module to be within a namespace.
- Enhances the Group class.
- Enhancements and fixes to the cms_url class.